; ModuleID = '/home/carl/AnghaBench/git/extr_wrapper.c_do_xmalloc.c'
source_filename = "/home/carl/AnghaBench/git/extr_wrapper.c_do_xmalloc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [59 x i8] c"Out of memory, malloc failed (tried to allocate %lu bytes)\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i64, i32)* @do_xmalloc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @do_xmalloc(i64 %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  store i64 %0, i64* %4, align 8
  store i32 %1, i32* %5, align 4
  %7 = load i64, i64* %4, align 8
  %8 = load i32, i32* %5, align 4
  %9 = call i64 @memory_limit_check(i64 %7, i32 %8)
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %12

11:                                               ; preds = %2
  store i8* null, i8** %3, align 8
  br label %38

12:                                               ; preds = %2
  %13 = load i64, i64* %4, align 8
  %14 = trunc i64 %13 to i32
  %15 = call i8* @malloc(i32 %14)
  store i8* %15, i8** %6, align 8
  %16 = load i8*, i8** %6, align 8
  %17 = icmp ne i8* %16, null
  br i1 %17, label %23, label %18

18:                                               ; preds = %12
  %19 = load i64, i64* %4, align 8
  %20 = icmp ne i64 %19, 0
  br i1 %20, label %23, label %21

21:                                               ; preds = %18
  %22 = call i8* @malloc(i32 1)
  store i8* %22, i8** %6, align 8
  br label %23

23:                                               ; preds = %21, %18, %12
  %24 = load i8*, i8** %6, align 8
  %25 = icmp ne i8* %24, null
  br i1 %25, label %36, label %26

26:                                               ; preds = %23
  %27 = load i32, i32* %5, align 4
  %28 = icmp ne i32 %27, 0
  br i1 %28, label %32, label %29

29:                                               ; preds = %26
  %30 = load i64, i64* %4, align 8
  %31 = call i32 @die(i8* getelementptr inbounds ([59 x i8], [59 x i8]* @.str, i64 0, i64 0), i64 %30)
  br label %35

32:                                               ; preds = %26
  %33 = load i64, i64* %4, align 8
  %34 = call i32 @error(i8* getelementptr inbounds ([59 x i8], [59 x i8]* @.str, i64 0, i64 0), i64 %33)
  store i8* null, i8** %3, align 8
  br label %38

35:                                               ; preds = %29
  br label %36

36:                                               ; preds = %35, %23
  %37 = load i8*, i8** %6, align 8
  store i8* %37, i8** %3, align 8
  br label %38

38:                                               ; preds = %36, %32, %11
  %39 = load i8*, i8** %3, align 8
  ret i8* %39
}

declare dso_local i64 @memory_limit_check(i64, i32) #1

declare dso_local i8* @malloc(i32) #1

declare dso_local i32 @die(i8*, i64) #1

declare dso_local i32 @error(i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
